adding perennial tab

--- a/public/mainstyle.css
+++ b/public/mainstyle.css
@@ -50,6 +50,10 @@
 	font-family: 'PT Sans', sans-serif;
 }
 
+.downloadsMainSection {
+	
+}
+
 .whoWeAreTitle {
 	font-size: 35px;
 	text-align: center;
