--- a/public/mainstyle.css
+++ b/public/mainstyle.css
@@ -50,26 +50,84 @@
 	font-family: 'PT Sans', sans-serif;
 }
 
+.perennialSubtitle {
+	font-size: 20px;
+	text-align: center;
+	padding: 10px 0 0 0;
+	color: rgb(255,255,255);
+	line-height: 30px;
+	font-family: 'PT Sans', sans-serif;
+}
+
 .downloadsMainSection {
-	width: 100%;
+	width: 95%;
 	height: 400px;
-	background-color: rgb(50,23,24);
+	padding: 20px 0;
+	margin: 0 auto;
+	border-radius: 50px;
+	background-color: rgba(0,0,0,0.5);
 }
 
 .bookmarks {
-	width: 500px;
+	width: 580px;
 	padding-top: 25px;
 	margin: 0 auto;
 }
 
 .bookmarkLink {
-	width: 200px;
+	width: 250px;
 	text-align: center;
-	vertical-align: middle;
-	height: 50px;
-	background-color: rgb(200,200,200);
+	background-color: rgb(0,0,0);
 	float: left;
 	margin: 0 20px;
+	padding: 15px 0;
+	font-size: 18px;
+	color: rgb(255,255,255);
+	border-radius: 5px;
+	font-family: 'Work Sans', sans-serif;
+	text-decoration: none;
+}
+
+.bookmarkLink:visited {
+	color: rgb(255,255,255);
+}
+
+.downloads {
+	width: 580px;
+	height: 100px;
+	padding: 50px 0;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.deliverables {
+	width: 870px;
+	height: 100px;
+	padding: 50px 0;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.downloadLinkTitle {
+	margin: 0 auto;
+	padding-bottom: 20px;
+	text-align: center;
+	font-size: 30px;
+	font-family: 'Work Sans', sans-serif;
+	font-weight: bold;
+}
+
+.downloadsLink {
+	width: 250px;
+	text-align: center;
+	background-color: rgb(0,0,0);
+	float: left;
+	margin: 0 20px;
+	padding: 15px 0;
+	font-size: 18px;
+	color: rgb(255,255,255);
+	border-radius: 5px;
+	font-family: 'Work Sans', sans-serif;
 }
 
 .whoWeAreTitle {
