--- a/public/mainstyle.css
+++ b/public/mainstyle.css
@@ -59,18 +59,15 @@
 	font-family: 'PT Sans', sans-serif;
 }
 
-.downloadsBackgroundImage {
-	position: absolute;
-	clip-path: polygon(0 0, 100% 0, 100% 440px, 0 440px);
-	z-index:-1;
-}
 
 .downloadsMainSection {
 	width: 95%;
 	height: 400px;
 	padding: 20px 0;
-	margin: 0 auto;
+	margin: 50px auto;
+	top: 100px;
 	border-radius: 50px;
+	background-image: url(images/blurryflowers.jpg);
 	background-color: rgba(0,0,0,0.5);
 }
 
@@ -96,6 +93,10 @@
 
 .bookmarkLink:visited {
 	color: rgb(255,255,255);
+}
+
+.bookmarkLink:hover {
+	color: rgb(200,200,200);
 }
 
 .downloads {
@@ -134,6 +135,21 @@
 	color: rgb(255,255,255);
 	border-radius: 5px;
 	font-family: 'Work Sans', sans-serif;
+	text-decoration: none;
+}
+
+.downloadsLink:hover {
+	width: 250px;
+	text-align: center;
+	background-color: rgb(0,0,0);
+	float: left;
+	margin: 0 20px;
+	padding: 15px 0;
+	font-size: 18px;
+	color: rgb(200,200,200);
+	border-radius: 5px;
+	font-family: 'Work Sans', sans-serif;
+	text-decoration: none;
 }
 
 .whoWeAreTitle {
